# cslam

./: .gitignore  CMakeLists.txt  README.md  environment.yml  nodelet_plugins.xml  package.xml  requirements.txt  setup.py  spec-file.txt
.trunk/: out  trunk.yaml
config/cslam/: README.md  default.yaml  default_kitti.yaml  example.yaml
cslam/: algebraic_connectivity_maximization.py  broker.py  global_descriptor_loop_closure_detection.py  global_image_descriptor_loop_closure_detection.py  lidar_handler.py  lidar_handler_node.py  loop_closure_detection.py  loop_closure_detection_node.py  loop_closure_matching.py  loop_closure_sparse_matching.py  nearest_neighbors_matching.py  neighbor_monitor.py  neighbors_manager.py  netvlad.py  nn_matching.py  nns_matching.py
cslam/lidar_pr/: icp_utils.py  scancontext.py  scancontext_matching.py  scancontext_utils.py
cslam/mac/: mac.py  requirements.txt  utils.py
cslam/utils/: misc.py  point_cloud2.py  utils.py
cslam/vpr/: cosplace.py  netvlad.py
cslam/vpr/cosplace_utils/: README.md  network.py
external_loop_closure_detection/: algebraic_connectivity_maximization.py  global_image_descriptor_loop_closure_detection.py  nearest_neighbors.py  nearest_neighbors_matching.py  netvlad.py  netvlad_loop_closure_detection.py  vit_loop_closure_detection.py
include/cslam/: LoopClosureDetection.h  LoopClosureServiceHandler.h  MapDataHandler.h  MapManager.h  StereoHandler.h
include/cslam/back_end/: decentralized_pgo.h  gtsam_msg_conversion.h  gtsam_utils.h  pose_graph_manager.h
include/cslam/back_end/utils/: logger.h  simulated_rendezvous.h
include/cslam/front_end/: map_manager.h  rgbd_handler.h  sensor_handler_interface.h  sensor_msg_conversion.h  sensor_msg_utils.h  stereo_handler.h  visualization_utils.h
include/cslam/front_end/utils/: depth_traits.h
include/external_loop_closure_detection/: MsgConversion.h
include/loop_closure_detection/: LoopClosureDetection.h  LoopClosureServiceHandler.h
launch/: cslam.launch.py  demo_kitti_2robots.xml  external_loop_closure_detection.launch  external_loop_closure_detection_kitti.launch  external_loop_closure_detection_realsense.launch  kitti.launch.py  rtabmap.launch.py
launch/odometry/: rtabmap_odometry.launch.py
launch/sensors/: bag_kitti.launch  bag_kitti.launch.py  bag_kitti.xml  bag_rd435i.launch  bag_tum.launch.py  decompress_bag_rd435i.launch
launch/slam/: rtabmap_mapping.launch.py  rtabmap_odometry.launch.py
loop_closure_detection/: algebraic_connectivity_maximization.py  global_image_descriptor_loop_closure_detection.py
models/: download.sh
scripts/: loop_closure_detection.py
scripts/sensors/: fix_depth_step.py
src/: ExternalLoopClosureDetection.cpp  ExternalLoopClosureDetectionTriplet.cpp  ExternalLoopClosureDetectionTuples.cpp  LoopClosureDetection.cpp  LoopClosureDetectionNode.cpp  LoopClosureServiceHandler.cpp  MapDataHandler.cpp  MapDataHandlerNode.cpp  MapManager.cpp  MapManagerNode.cpp  MsgConversion.cpp  StereoHandler.cpp
src/back_end/: decentralized_pgo.cpp  gtsam_msg_conversion.cpp  gtsam_utils.cpp  pose_graph_manager.cpp  pose_graph_manager_node.cpp
src/back_end/utils/: logger.cpp  simulated_rendezvous.cpp
src/external_loop_closure_detection/: netvlad_loop_closure_detection.py  vit_loop_closure_detection.py
src/front_end/: map_manager.cpp  map_manager_node.cpp  msg_conversion.cpp  rgbd_handler.cpp  sensor_msg_conversion.cpp  sensor_msg_utils.cpp  stereo_handler.cpp  visualization_utils.cpp
srv/: DetectLoopClosure.srv
tests/: README.md  test_algebraic_connectivity.py  test_broker.py  test_global_image_descriptor_loop_closure_detection.py  test_sparse_matching.py
tests/data/: .gitignore
tests/data/kitti00/: kitti00_gt.tum
tests/data/kitti00/2robots/: 0.g2o  0.tum  1.g2o  1.tum
tests/data/kitti00/3robots/: 0.g2o  0.tum  1.g2o  1.tum  2.g2o  2.tum
tests/data/kitti00/5robots/: 0.g2o  1.g2o  2.g2o  3.g2o  4.g2o
tests/data/kitti02/2robots/: 0.g2o  0.tum  1.g2o  1.tum
tests/data/kitti05/2robots/: 0.g2o  0.tum  1.g2o  1.tum
tests/tools/: evaluation_tools.py
