<?xml version="1.0"?>
<package format="2">
  <name>external_loop_closure_detection</name>
  <version>0.0.1</version>
  <description>External Loop Closure Detection for RTAB-Map</description>
  <maintainer email="lajoie.py@gmail.com">Pierre-Yves Lajoie</maintainer>
  <author>Pierre-Yves Lajoie</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>rtabmap</depend>
  <depend>rtabmap_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>class_loader</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
